@@ -2,42 +2,40 @@ package org.leralix.tancommon.commands.subcommands;
 
 import org.bukkit.command.CommandSender;
 import org.leralix.lib.commands.SubCommand;
-import org.leralix.tancommon.TownsAndNationsMapCommon;
+import org.leralix.tancommon.storage.Constants;
 
-import java.util.Collections;
 import java.util.List;
 
-public class UpdateChunksCommand extends SubCommand {
+public class ReloadCommand extends SubCommand {
+
+
     @Override
     public String getName() {
-        return "update";
+        return "reload";
     }
 
     @Override
     public String getDescription() {
-        return "Update the Dynmap";
+        return "Reload plugin config";
     }
 
+    @Override
     public int getArguments() {
         return 1;
     }
 
     @Override
     public String getSyntax() {
-        return "/tanmap update";
+        return "";
     }
 
     @Override
     public List<String> getTabCompleteSuggestions(CommandSender commandSender, String s, String[] strings) {
-        return Collections.emptyList();
+        return List.of();
     }
 
     @Override
     public void perform(CommandSender commandSender, String[] strings) {
-        TownsAndNationsMapCommon.getPlugin().updateDynmap();
-        commandSender.sendMessage("Map updated");
+        Constants.init();
     }
-
 }
-
-
